# masters_degree_python_project_2

./: Makefile  README.md  a.py  pyproject.toml
src/primitive_db/: conf.py  core.py  engine.py  main.py
src/primitive_db/const/: auto_column_names.py  column_types.py  columns_type.py  commands.py
src/primitive_db/db_objs/: __init__.py  column.py  database.py  db_object.py  table.py  validator.py
src/primitive_db/exceptions/: command_error.py
src/primitive_db/metadata/: __init__.py  column.py  database.py  db_object.py  table.py  validator.py
src/primitive_db/schemas/: db_meta.py
src/primitive_db/schemas/db_objs/: column.py  db_object.py  table.py
src/primitive_db/utils/: cache.py  command_data_handler.py  decorators.py  duplicates.py  load_data.py  metadata.py  parser.py
