[tool.poetry]
name = "project#2_prusova_iuliia"
version = "0.1.0"
description = ""
authors = ["Iuliia <prusova.work@gmail.com>"]
packages = [
 { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"


