[tool.poetry]
name = "project#2_prusova_iuliia"
version = "0.1.0"
description = ""
authors = ["Iuliia <prusova.work@gmail.com>"]
packages = [
 { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
ruff = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 79
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
